@@ -617,7 +617,9 @@ void MainWindow::execContextMenuPackages(QPoint point)
     {
       const PackageRepository::PackageData*const package = m_packageModel->getData(item);
 
-      if (UnixCommand::getBSDFlavour() == ectn_PCBSD || UnixCommand::getBSDFlavour() == ectn_FREEBSD)
+      if (UnixCommand::getBSDFlavour() == ectn_PCBSD ||
+          UnixCommand::getBSDFlavour() == ectn_FREEBSD ||
+          UnixCommand::getBSDFlavour() == ectn_GHOSTBSD)
       {
         if (package->installed() == false || package->required || Package::isForbidden(package->name))
         {
